--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-.bg {
-  background-image: url('https://images.unsplash.com/photo-1548964224-4c4a1964d4c2');
-  background-size: cover;
-  height: 100vh;
+.cursor-pointer {
+  cursor: pointer;
 }
