--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,13 @@
 
 .sidebar {
   height: calc(100vh - 56px);
-  overflow-y: auto;
+  /* overflow-y: auto; */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  position: sticky;
+  top: 56px;
 }
 
-.navbar-brand a ,.sidebar-nav a {
+.navbar-brand a, .sidebar-nav a {
   text-decoration: none;
   color: #fff;
 }
